force-app/main/default/objects/MTech_SaaS_Log__c/MTech_SaaS_Log__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-019882

Audit Log for the MTech SaaS Subscription Object</description>
    <label>MTech SaaS Log</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SaaS Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTech SaaS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>