force-app/main/default/objects/MTech_SaaS_Log__c/fields/MTech_SaaS_Subscription__c.field-meta.xml
<CustomField>
    <fullName>MTech_SaaS_Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MTech SaaS Subscription</label>
    <referenceTo>MTech_SaaS_Subscription__c</referenceTo>
    <relationshipLabel>MTech SaaS Logs</relationshipLabel>
    <relationshipName>MTech_SaaS_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>