force-app/main/default/objects/MTech_SaaS_Log__c/fields/Old_Qty__c.field-meta.xml
<CustomField>
    <fullName>Old_Qty__c</fullName>
    <label>Old Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>